@@ -4,6 +4,7 @@ import com.google.protobuf.gradle.proto
 plugins {
     `java-configuration`
     id("com.google.protobuf") version "0.9.4"
+    kotlin("jvm")
 }
 
 repositories {
@@ -31,7 +32,8 @@ dependencies {
     testImplementation("org.powermock:powermock-module-junit4:2.0.9")
     testImplementation("org.powermock:powermock-api-mockito2:2.0.9")
     testImplementation("org.awaitility:awaitility:4.2.1")
-
+    implementation(kotlin("stdlib-jdk8"))
+    testImplementation(kotlin("test-junit"))
 }
 
 protobuf {
@@ -68,6 +70,25 @@ sourceSets {
     }
 }
 
-tasks.test {
-    testLogging.showStandardStreams = true
+tasks {
+    test {
+        testLogging.showStandardStreams = true
+        filter { excludeTestsMatching("*MockTest*") }
+    }
+
+    val mockTest by registering(Test::class) {
+        group = "verification"
+        testLogging.showStandardStreams = true
+        filter { includeTestsMatching("*MockTest*") }
+        allJvmArgs = allJvmArgs.toMutableList().apply { add("--enable-preview") }
+    }
+
+    check {
+        dependsOn(mockTest)
+    }
 }
+
+kotlin {
+    jvmToolchain(21)
+}
+
